[package]
name = "rust_rooms"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["ws"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
tower-http = { version = "*", features = ["fs", "trace"] }
tracing = "*"
tracing-subscriber = "*"
futures = "*"