[package]
name = "rust_rooms"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
turn = "0.11.0"
anyhow = "1.0"
async-trait = "0.1"
webrtc-util = "0.12.0"
